--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "react/event-loop": "^0.4.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Sokoban\\": "src/"
+        }
     }
 }
